--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,21 @@ annotated-types==0.7.0
 anyio==4.7.0
 APScheduler==3.11.0
 click==8.1.8
+ecdsa==0.19.0
 fastapi==0.115.6
 h11==0.14.0
 idna==3.10
 mysql-connector-python==9.1.0
+passlib==1.7.4
+pyasn1==0.6.1
 pydantic==2.10.4
 pydantic_core==2.27.2
+PyJWT==2.10.1
 python-dotenv==1.0.1
+python-jose==3.3.0
 pytz==2024.2
+rsa==4.9
+six==1.17.0
 slack_sdk==3.34.0
 sniffio==1.3.1
 starlette==0.41.3
