--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,53 +1,52 @@
+version: '3.8'
+
 services:
-  backend:
+  app:
     build:
-      context: .
-      dockerfile: docker/backend.Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
+    ports:
+      - "8000:8000"
     environment:
-      - TZ=Asia/Seoul
       - MYSQL_HOST=db
-      - MYSQL_PORT=3306
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_PORT=3306
+      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+      - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    volumes:
+      - ../:/app
     networks:
       - app-network
 
-  frontend:
-    build:
-      context: .
-      dockerfile: docker/frontend.Dockerfile
-    environment:
-      - TZ=Asia/Seoul
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
-    networks:
-      - app-network
-
-  ddb:
+  db:
     image: mysql:8.0
+    ports:
+      - "3306:3306"
     environment:
-      - TZ=Asia/Seoul
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-    command: [ 'mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--default-time-zone=+09:00' ]
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql  # 초기화 스크립트 추가
-    ports:
-      - "3306:3306"
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  mysql-data:
+    driver: local
 
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  mysql-data:
