--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,53 @@
 annotated-types==0.7.0
-anyio==4.7.0
+anyio==4.8.0
 APScheduler==3.11.0
+Authlib==1.4.1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.0
 dnspython==2.7.0
+dparse==0.6.4
 ecdsa==0.19.0
 email_validator==2.2.0
-fastapi==0.115.6
+fastapi==0.115.7
+filelock==3.16.1
 h11==0.14.0
 idna==3.10
-mysql-connector-python==9.1.0
+Jinja2==3.1.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.0
+mdurl==0.1.2
+mysql-connector-python==9.2.0
+packaging==24.2
 passlib==1.7.4
+psutil==6.1.1
 pyasn1==0.6.1
-pydantic==2.10.4
-pydantic_core==2.27.2
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.19.1
 PyJWT==2.10.1
 python-dotenv==1.0.1
 python-jose==3.3.0
 pytz==2024.2
+requests==2.32.3
+rich==13.9.4
 rsa==4.9
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+safety==3.2.14
+safety-schemas==0.0.10
+setuptools==75.8.0
+shellingham==1.5.4
 six==1.17.0
 slack_sdk==3.34.0
 sniffio==1.3.1
-starlette==0.41.3
+starlette==0.45.3
+typer==0.15.1
 typing_extensions==4.12.2
 tzlocal==5.2
+urllib3==2.3.0
 uvicorn==0.34.0
