--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.8.0
 APScheduler==3.11.0
 Authlib==1.4.1
+cachetools==5.5.1
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -13,6 +14,11 @@ ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.115.7
 filelock==3.16.1
+google-api-core==2.24.1
+google-auth==2.38.0
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
 h11==0.14.0
 idna==3.10
 Jinja2==3.1.5
@@ -23,8 +29,11 @@ mdurl==0.1.2
 mysql-connector-python==9.2.0
 packaging==24.2
 passlib==1.7.4
+proto-plus==1.26.0
+protobuf==5.29.3
 psutil==6.1.1
 pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
