--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # 의존성 설치를 위한 파일만 먼저 복사하여 캐시 활용
 COPY requirements.txt .
-RUN pip install --no-cache-dir --user -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # 런타임 스테이지
 FROM python:3.12.8-slim
@@ -29,28 +29,23 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && ln -snf /usr/share/zoneinfo/Asia/Seoul /etc/localtime \
     && echo "Asia/Seoul" > /etc/timezone
 
-# 보안을 위한 비루트 사용자 생성
-RUN useradd -r -s /bin/false -m -u 1000 appuser
+# 빌더 스테이지에서 파이썬 패키지를 시스템 레벨로 복사
+COPY --from=builder /usr/local/lib/python3.12/site-packages/ /usr/local/lib/python3.12/site-packages/
+COPY --from=builder /usr/local/bin/ /usr/local/bin/
 
-# 빌더 스테이지에서 필요한 파이썬 패키지만 복사
-COPY --from=builder /root/.local/lib/python3.12/site-packages/ /usr/local/lib/python3.12/site-packages/
+# 애플리케이션 소스코드 복사
+COPY . /app/
 
-# 애플리케이션 소스코드를 분리하여 복사
-COPY --chown=appuser:appuser ./apis /app/apis
-COPY --chown=appuser:appuser ./utils /app/utils
-COPY --chown=appuser:appuser ./configs /app/configs
-COPY --chown=appuser:appuser ./middlewares /app/middlewares
-COPY --chown=appuser:appuser ./main.py /app/
-
-# 보안 설정
-RUN chmod -R 550 /app
+# 보안을 위한 비루트 사용자 생성 및 권한 설정
+RUN useradd -r -s /bin/false -m -u 1000 appuser && \
+    chown -R appuser:appuser /app && \
+    chmod -R 755 /app
 
 USER appuser
 
 # 환경 변수 설정
 ENV PYTHONPATH=/app \
-    PYTHONUNBUFFERED=1 \
-    PATH="/home/appuser/.local/bin:$PATH"
+    PYTHONUNBUFFERED=1
 
 # 헬스체크 최적화
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
