--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.0
+distro==1.9.0
 dnspython==2.7.0
 dparse==0.6.4
 ecdsa==0.19.0
@@ -20,13 +21,17 @@ googleapis-common-protos==1.66.0
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+jiter==0.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.0
 mdurl==0.1.2
 mysql-connector-python==9.2.0
+openai==1.61.1
 packaging==24.2
 passlib==1.7.4
 proto-plus==1.26.0
@@ -36,12 +41,14 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
+pydantic-settings==2.7.1
 pydantic_core==2.23.4
 Pygments==2.19.1
 PyJWT==2.10.1
 python-dotenv==1.0.1
 python-jose==3.3.0
 pytz==2024.2
+redis==5.2.1
 requests==2.32.3
 rich==13.9.4
 rsa==4.9
@@ -55,6 +62,7 @@ six==1.17.0
 slack_sdk==3.34.0
 sniffio==1.3.1
 starlette==0.45.3
+tqdm==4.67.1
 typer==0.15.1
 typing_extensions==4.12.2
 tzlocal==5.2
